Fixed padding for navbar collapsed Used CDN for fonts (can easily be changed)

--- a/admin_bootstrap3/static/admin/less/bootstrap_admin.less
+++ b/admin_bootstrap3/static/admin/less/bootstrap_admin.less
@@ -1,4 +1,9 @@
 @import "forms";
 @import "chosen";
+@import "nav";
 
 body { padding-top: 50px; }
+
+.navbar-toggle {
+    border-color: #fff;
+}
